--- a/content/post/others/一封小信.md
+++ b/content/post/others/一封小信.md
@@ -6,27 +6,30 @@ categories: ["others"]
 tags: ["relation"]
 ---
 
->我不知道你会不会看到这段话，可能你收到花直接就扔了，也可能你失望透顶不会进来看这个网站，但是我还是决定赌一把。不奢望太多，起码认错道歉，也聊聊我的想法。
+提笔时思绪万千，却迟迟未能落笔。并非不愿下笔，只是每次想要认真说些什么，总觉言语太过单薄，难以承载这些时日的深思与沉淀。今日终于得闲，便想着与你坦诚相对，说些或许不够条理却发自肺腑的话。
 
->首先道个歉吧，之前我话说的很差劲，说完之后就意识到这个问题了，所以打电话道歉哄哄你。
+>我不知你会不会读到这些，也许花已凋落，也许你早已失望离去。可我仍想赌一次微光。不奢望太多，起码认错道歉，也把那些未曾铺开的心事说给你听。
 
-1.  关于你之前提到我不舍得花钱、没好好规划我们之间的事，我想和你解释一下。我知道你平时工作忙，周末需要休息，所以大多时候都是我去青岛找你；你说过想晚上就能见到我，后来我也尽量买下午或晚上的车次。我每个月奖学金4千，留2千左右自己用，路费大概1千5（所以返程常买动卧或硬座——我觉得自己累一点没关系，只要我们在一起的时候舒服就好），剩下500左右是我们见面时可以用的。如果你提前说想出去玩，我会尽量多省一些，或者做点兼职。但有时还是会有计划外的开销，比如买衣服（我听你的推荐，会买，但不会买很多），太大的消费我可能确实支撑起来有点吃力。你之前看到我账户里有七八万，现在其实只剩六万多——我不是在抱怨，只是想告诉你，我愿意为我们付出，甚至常常“有一百就想花一百五”。
+>最先要说的，还是对不起。那天话一出口，我便知道说重了。所以急着打电话找你。
 
-2.  我知道你不想找一个没能力的人，你现在月薪接近一万，我也在努力让自己不落后太多。只是很多时候我做了却没有跟你说，导致你觉得我什么都没做——这确实是我的问题，是我没沟通好。下学期我去实习，也是想多挣点，让我们的压力小一些。我们一起出去玩时，住宿、行程我都会先计划好，再让你选，然后我来下单。
+1.  你曾说我不舍得花钱、对未来疏于规划，我一直放在心上。知道你工作忙，周末需要缓一口气，所以大多时候，都是我去青岛见你；你说想夜里就能见到，后来我便常买傍晚或夜间的票。每月奖学金四千，我留不过两千作日常，车费占去一千五（返程时买动卧或硬座，路上累一点无妨，只要见到你时能好好相伴）。余下五百多，是我们见面时能用的。若你提前说想出去玩，我便悄悄省更多，或去做点兼职。只是偶尔仍有计划外的花费，比如添衣（我听你的建议，只是买得少些），再大的开销，我确实会感到吃力。你见过我账户里曾有七八万，如今只剩六万有余——不是抱怨，只想让你知道：我愿意为我们付出，甚至常常“怀揣一百，却肯你花出一百五”。
 
-    > 还记得之前计划去南京吗？我先到青岛，再一起出发。我订了高铁票，还找到一家带温泉和投影仪的房间，在雨花台区，楼下就是地铁。凌晨两点找到那家时我特别高兴，觉得你一定会喜欢。我不是要求回报，只是希望你知道：我一直在努力。但现在回想，可能我做得太“自然”了，反而让你觉得这一切是理所当然的。
+2.  我懂你不想找一个无力并肩的人。你月薪近万，我也默默努力，不愿落后太多。只是我总做得沉默，让你以为我什么都不做——这是我的错，是我不善言辞。下学期我去实习，也是想多挣一些，让日子松快些。每次计划同行，住宿、车票我都先查好，再由你挑选，我来下单。
 
-3.  也许我说得有点啰嗦，但还是想多说两句：你之前问我“要不要吃这个”“要不要买那个”的时候，我其实没意识到你是在顾虑我的经济情况。我以为你只是问我需不需要、喜不喜欢，所以总是说“你想买就买呀，我没关系”。如果我早知道你是怕我花钱有压力，我一定会直接说“不用考虑价格，你喜欢我们就买”。这也是我之前答应你改掉“抠搜”习惯的一部分——我在改，只是可能没让你察觉到。
+    > 还记得之前计划去南京吗？我先到青岛，再一起出发。我订了高铁票，还找到一家带温泉和投影仪的房间，在雨花台区，楼下就是地铁。凌晨两点找到那家时我特别高兴，觉得你一定会喜欢。我不是要求回报，只是希望你知道：我一直在努力认真待你。但现在回想，可能我做得太“自然”了，反而让你觉得这一切是理所当然。
 
-4.  我说话有时确实不经大脑，记性也不好，偶尔还会走神。请你千万别多想，也不用反复揣测我的话——我真的只是字面意思，特别直白。就像最后一次吵架时我说的，我从来不会、也永远不会瞧不起什么“小镇做题家”，我自己也是其中一员。
+3.  也许我说得有点啰嗦，但还是想多说两句：你之前问我“要不要吃这个”“要不要买那个”的时候，我其实没意识到你是在顾虑我的经济情况。我以为你只是问我需不需要、喜不喜欢，所以总是说“你想买就买呀，我没关系”。如果我早知道你是怕我花钱有压力，我一定会直接说“不用考虑价格，你喜欢我们就买”。这也是我之前答应你改掉“抠搜”习惯的一部分——我在改，只是可能没让你察觉到。上次你来北京，我确实显得拘谨，可能是当月确实有点超支，但是这个月兼职赚了点小钱，所以买份礼物以作补偿。
 
-5.  我始终相信你的人品和能力。我知道你不会和别人暧昧，也理解你工作忙。自从前女友那件事之后，我认真反思过自己，后来我也一直注意和异性保持距离，尽量只和男性朋友来往。我知道这是应该的，不值得夸耀，但我想用行动证明：我真的改了。
+4.  我说话常不过心，记性也差，有时说着说着眼神就飘远了。请你千万别反复思量我的话—。就像浅溪里的石子，一眼可见底，没有深意。就像最后一次吵架时我说的，我从来不会、也永远不会瞧不起“小镇做题家”，我自己也这样一路走来。
 
-6.  我明白你现在很生气，也可能因为我很多事没和你沟通，让你觉得我小气、不够爱你甚至不信任你。希望我这些话没有让你更不安。我们都先平静一下，我不奢求你立刻原谅我，我也知道自己有很多坏习惯，和家人的关系也没处理好。这些我都会在春节期间认真面对。
+5.  我始终信你，信你人品清亮，信你处事分明，也信你工作忙碌无暇他顾。从前那件事后，我认真反省了自己，此后便自觉与异性疏远，交往大多止于几位旧友。这本是应当，不值多言，但我仍想用时间证明：我在改变。也希望你能看到这般。
 
-7.  三亚那次没给你买什么礼物，所以在淘宝上买了你想要的粉底液，当作新年的一点心意。手术你安心去做，别担心，医生都很专业，也会照顾好你。祝你一切顺利。
+6.  我知道你现在或许仍生气，或许因我许多未尽之言，觉得我小气、爱得不够深、信任不足。但愿这些字句没有增添你的不安。我们都先静一静。我不求立刻被原谅，也自知身上有不少旧习，与家人的关系亦未理顺。这个春节，我会直接面对它们。
+
+7.  三亚之行没能为你选礼物，于是在淘宝下单了你提过的粉底液，当作一份新年小小心意。手术之事请安心，医生专业，会悉心照料。愿你一切顺利。
 
 ---
 
-一直爱你，从未改变。  
+爱意从未中断，
+它只是沉入言语的深井，如今才敢打捞见光。
 ❤️
