--- a/content/post/others/一封小信.md
+++ b/content/post/others/一封小信.md
@@ -24,9 +24,11 @@ tags: ["relation"]
 
 5.  我始终信你，信你人品清亮，信你处事分明，也信你工作忙碌无暇他顾。从前那件事后，我认真反省了自己，此后便自觉与异性疏远，交往大多止于几位旧友。这本是应当，不值多言，但我仍想用时间证明：我在改变。也希望你能看到这般。
 
-6.  我知道你现在或许仍生气，或许因我许多未尽之言，觉得我小气、爱得不够深、信任不足。但愿这些字句没有增添你的不安。我们都先静一静。我不求立刻被原谅，也自知身上有不少旧习，与家人的关系亦未理顺。这个春节，我会直接面对它们，逃避永远无法解决问题。
+6.  你一直记着我母亲提过“门户”二字。她的本意并非比较家境高低，更多是责怪我未曾好好了解你家庭的根基——父母做什么工作、身体是否康健、有无基本的保障……这些我竟都说不清楚。她所求的，无非是知道对方并非闲散无依，有一份踏实的工作，能撑起一个寻常温暖的家，便足够了。那两个字背后，藏着的不是衡量，而是一份朴素的、对安稳的期待。
 
-7.  三亚之行没能为你选礼物，于是在淘宝下单了你提过的粉底液，当作一份新年小小心意。手术之事请安心，医生专业，会悉心照料。愿你一切顺利。
+7.  我知道你现在或许仍生气，或许因我许多未尽之言，觉得我小气、爱得不够深、信任不足。但愿这些字句没有增添你的不安。我们都先静一静。我不求立刻被原谅，也自知身上有不少旧习，与家人的关系亦未理顺。这个春节，我会直接面对它们，逃避永远无法解决问题。
+
+8.  三亚之行没能为你选礼物，于是在淘宝下单了你提过的粉底液，当作一份新年小小心意。手术之事请安心，医生专业，会悉心照料。愿一切顺利。
 
 ---
 
